# crazyflie_backend

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Dockerfile.ci  README.md  docker-compose.yml  pyproject.toml  setup-env.sh  setup.cfg
backend/: app.py  drone.py  drone_registry.py  registered_drone.py  registry.py  state.py  utils.py
backend/communication/: argos_drone_link.py  callbacks.py  command.py  communication.py  crazyflie_drone_link.py  drone_link.py  initiate.py  log_message.py  message.py  messages.py  simulated_drone_link.py
backend/database/: database.py  models.py  statements.py
backend/exceptions/: communication.py  response.py
backend/models/: drone.py  drone_model.py  mission.py
backend/routers/: argos.py  common.py  crazyflie.py  utils.py
backend/tasks/: backend_task.py  inbound_debug_crazyflie_message_task.py  inbound_log_processing_task.py  inbound_websocket_heartbeat_task.py  initiate.py  insert_log_task.py  outbound_drone_pulses_task.py  process_mission_termination_task.py  tasks.py
ci/: Dockerfile.dind  Dockerfile.openapi-generator-cli  openapi-generator-config.yaml
tests/functional/: conftest.py  test_common_endpoints.py  test_endpoints.py
tests/functional/routers/: test_common_endpoints.py  test_crazyflie_endpoints.py
tests/unit/: test_app.py  test_boilerplate.py  test_registered_drone.py  test_registry.py
tests/unit/communication/: test_argos_drone_link.py  test_communication.py  test_crazyflie_drone_link.py  test_log_message.py
tests/unit/database/: test_models.py  test_statements.py
tests/unit/tasks/: test_backend_task.py  test_inbound_log_processing_task.py  test_tasks.py
