[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''
ignore_missing_imports = true
pretty = true
show_column_numbers = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
name = "backend"
version = "1.11.0"
description = "Backend handling communications between clients and drones and data persistance"
authors = [
    "William Trépanier <william.trepanier@polymtl.ca>",
    "Hugo Lachieze-Rey <hugo.lachieze-rey@polymtl.ca>",
    "Pier-Luc Tanguay <pl.tanguay@polymtl.ca>",
    "Sami Sadfa <sami.sadfa@polymtl.ca>",
    "Wail Ayad <abderrahmane-wail.ayad@polymtl.ca>",
]

[tool.poetry.dependencies]
python = "~3.9"
autoname = "^2.0.0"
asyncpg = "^0.25.0"
colorama = "^0.4.4"
cflib = "^0.1.16"
coveo-functools = "^2.0.10"
coveo-settings = "^2.0.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
PyYAML = "^5.4.1"
SQLAlchemy = "^1.4.26"
tenacity = "^8.0.1"
watchgod = "^0.7"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^4.0.1"
mypy = "0.910"  # Mypy is pinned so that it doesn't randomly break our main branch CI
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.19.2"
requests = "^2.26.0"

[tool.pytest.ini_options]
# ignore the RuntimeWarning that coroutine are not awaited during unit tests since that's expected
filterwarnings = ["ignore::RuntimeWarning"]

[tool.semantic_release]
version_variable = ["backend/__init__.py:__version__", "pyproject.toml:version"]
branch = "main"
commit_author = "Alfred Pennyworth <alfred.pennyworth@polymtl.ca>"
hvcs = "gitlab"
upload_to_pypi = false
upload_to_release = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
